refactoring triple to record